2017-04-12  Jérôme Pasquier  <rainbru@free.fr>

	* src/client/LocalTest.cpp (enter): subscribe to RLGL::System and
	override all LocalWorldsListener pure virtual functions.
	* src/client/LocalTest.hpp (LocalTest): now inherits
	LocalWorldsListener.
	* ext/librlgl: update to last head.

2017-04-11  Jérôme Pasquier  <rainbru@free.fr>

	* .travis.yml (before_install): try to init module with depth.

	* ext/librlgl: update to head.
	* .gitmodules: change git URL from git@ to https://.

	* .travis.yml (git): add submodules_depth to fix the travis-ci build.

	* src/client/LocalTest.cpp (save): save and restore CEGUI window
	and WaitingCircle.
	* src/client/StateSaver.cpp: implement save and restore functions
	for WaitingCircle.

2017-04-10  Jérôme Pasquier  <rainbru@free.fr>

	* src/client/GameEngine.cpp (reconfigure): remove MainMenu
	instantiation after ogre reconfiguration to avoid issue while
	reconfiguration in LocalTest.

	* src/client/LocalTest.cpp (keyPressed): return false to enable
	GmeEngine key bindings.

	* src/client/LocalTest.cpp (enter): call loadLayout now in a
	try/catch block.

2017-04-09  Jérôme Pasquier  <rainbru@free.fr>

	* src/client/WaitingCircle.hpp (visible): implement visibility
	and show()/hide() functions.

	* src/client/WaitingCircle.cpp (update): called from LocalTest.

	* src/client/WaitingCircle.cpp (updateBuffer): draw the first image of
	the animation.

2017-04-08  Jérôme Pasquier  <rainbru@free.fr>

	* src/client/LocalTest.cpp (enter): testing with StaticImage.
	* ext/librlgl: updated to head.

	* src/client/AnimatedImage.cpp (AnimatedImage): prerender all images
	in goemetry buffer vector.

	* src/client/AnimatedImage.cpp (updateSelf): implement update callback.

2017-04-06  Jérôme Pasquier  <rainbru@free.fr>

	* src/client/AnimatedImage.cpp (debug): add a logging function to
	know why the image drawing isn't working.

	* src/client/AnimatedImage.cpp (AnimatedImage): resize the image
	vector fix a segfault.
