@@ -166,6 +166,7 @@ Error is fixed, was due to a src/services/Services.hpp old code
   - [ ] Always failing. Trying to add a depth parameter
   - [ ] Maybe we need to add rlgl to travis ?
 **** TODO Create AnimatedImage class and continue LocalTest
+     CLOCK: [2017-04-13 jeu. 21:29]--[2017-04-13 jeu. 22:19] =>  0:50
      CLOCK: [2017-04-12 mer. 20:21]--[2017-04-12 mer. 21:13] =>  0:52
      CLOCK: [2017-04-11 mar. 19:17]--[2017-04-11 mar. 19:48] =>  0:31
      CLOCK: [2017-04-10 lun. 20:10]--[2017-04-10 lun. 20:33] =>  0:23
@@ -203,10 +204,14 @@ Error is fixed, was due to a src/services/Services.hpp old code
     make Save/Restore state functions
     - [X] Must implent StateSaver helper for WaitingCircle
       visibility state only
-    - [ ] Save the actual name and seed content
-      We must have 
-   - [ ] Must implent StateSaver helper for CEGUI::TabControl
-      Selected tab
+    - [-] Save the actual seed content
+      - [X] Implement getter and setter
+      - [ ] Use them in save/restore
+    - [ ] Save the actual name content
+      - [ ] Implement getter and setter
+      - [ ] Use them in save/restore
+  - [ ] Must implent StateSaver helper for CEGUI::TabControl
+     Selected tab
     - [ ] Must implent StateSaver helper for CEGUI::ListBox
       List items. Maybe a standard helper for StringLists
   - [ ] Use RlglSystem::getLocalWorlds() and add them to existing worlds listbox
@@ -214,6 +219,10 @@ Error is fixed, was due to a src/services/Services.hpp old code
     - [ ] Try to use it. LocalTest should override LocalWorldsListener.hpp
     - [ ] We have undefined references to RLGL::LocalWorldsListener's ctor
   - [ ] Call server::load(worldconfig) or server::generate(config)
+- [ ] See why, when we reconfigure ogre, after a res. change or ullscreen,
+  we restore gamestate only after we close the confirmation dialog
+  - Maybe we restore the gamestate after we save the new config. We must
+    restore the gamestate /before/ we show the confirmation dialog
 - [ ] Must be able to use keyboard arrows (up, down) on local worlds listbox
 - [ ] Launch an embedded server
 - [ ] See if we can generate a first landscape
